--- a/Challenges/Web/invisible-captcha/infra/public/index.html
+++ b/Challenges/Web/invisible-captcha/infra/public/index.html
@@ -12,6 +12,14 @@
     <p>I'm giving the flag out for free on this one. The only thing you have to do is solve a lil captcha, because spam or something.</p>
     <h4>Click here to generate a captcha:</h4>
     <input type="submit" value="I want a new captcha!" onclick="getCaptcha()">
+    <script>
+      function getCaptcha() {
+        let xhr = new XMLHttpRequest();
+
+        xhr.open("GET", "/generateCaptcha");
+        xhr.send();
+      }
+    </script>
     <h4>And submit your captcha here:</h4>
     <form id="captchaForm" action="/validateCaptcha" method="post">
         <input type="text" name="captcha" id="captcha">
@@ -25,12 +33,18 @@
         form.addEventListener("submit", e => {
             e.preventDefault();
 
-            formData = new FormData(form);
+            let enteredCaptcha = form.children[0].value;
             
             xhr.open("POST", "/validateCaptcha");
-            xhr.send(formData);
+            xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
 
-            alert(xhr.responseText);
+            xhr.send(`captcha=${enteredCaptcha}`);
+
+            xhr.onreadystatechange = () =>{
+              if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
+                alert(xhr.responseText);
+              }
+            }
         })
     </script>
   </body>
